--- a/.gitignore
+++ b/.gitignore
@@ -89,8 +89,10 @@ csx
 AppPackages/
 
 # Others
-[Bb]in/*
-[Oo]bj/*
+[Bb]in
+[Oo]bj
+LifeCycle/bin/*
+LifeCycle/obj/*
 sql
 TestResults
 [Tt]est[Rr]esult*
