--- a/.gitignore
+++ b/.gitignore
@@ -91,8 +91,8 @@ AppPackages/
 # Others
 [Bb]in
 [Oo]bj
-LifeCycle\bin\*
-LifeCycle\obj\*
+LifeCycle\LifeCycle\bin\*
+LifeCycle\LifeCycle\obj\*
 sql
 TestResults
 [Tt]est[Rr]esult*
